--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"dependencies": {
 		"body-parser": "^1.20.2",
 		"express": "^4.19.2",
+		"marked": "^13.0.3",
 		"md-to-pdf": "^5.2.4",
 		"morgan": "^1.10.0",
 		"typescript": "^5.5.4"
