--- a/package.json
+++ b/package.json
@@ -9,14 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@vercel/edge-config": "^1.2.1",
     "@vercel/kv": "^2.0.0",
     "marked": "^13.0.3",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "remark": "^15.0.1",
-    "remark-html": "^16.0.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
